# project-411

./: .gitignore  .testr.conf  .travis.yml  Dockerfile  README.md  README.rst  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
app/: __init__.py  events.py  routs.py
app/static/: css.css  js.js
app/static/css/: main.css
app/static/js/: main.js
app/templates/: index.html
bot/: __init__.py  models.py  stewie.py
tests/api/: test_base.py
tests/unit/: test_base.py
witml/: __init__.py  wit_ai.py
witml/templates/: wit-ai.html
